--- a/AudacieusesAPI/package.json
+++ b/AudacieusesAPI/package.json
@@ -2,13 +2,15 @@
   "name": "audacieuses-api",
   "version": "1.0.0",
   "description": "API REST pour l'application Les Audacieuses",
-  "main": "src/app.js",
-  "scripts": {
+  "main": "src/app.js",  "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "jest"
-  },
-  "dependencies": {
+    "test": "jest",
+    "migrate-to-postgres": "node scripts/migrate-mysql-to-postgres.js",
+    "adapt-models": "node scripts/adapt-models-for-postgres.js",
+    "adapt-queries": "node scripts/adapt-sql-queries-for-postgres.js",
+    "pg-setup": "npm run adapt-models && npm run adapt-queries && npm run migrate-to-postgres"
+  },"dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -20,7 +22,8 @@
     "moment": "^2.30.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
-    "mysql2": "^3.14.1",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "nodemailer": "^6.10.1",
     "sequelize": "^6.37.7",
     "socket.io": "^4.8.1",
