--- a/AudacieusesAPI/.env
+++ b/AudacieusesAPI/.env
@@ -3,10 +3,10 @@ NODE_ENV=development
 PORT=3000
 SYNC_DB=true
 
-# Configuration de la base de données
+# Configuration de la base de données PostgreSQL
 DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
+DB_USER=postgres
+DB_PASSWORD=postgres
 DB_NAME=audacieuses_db
 
 # Configuration JWT
